--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header class="header">
-      <h1><a class="logo" href="#mainPage">SARAFIN</a></h1>
+      <h1><a class="logo" href="https://sarafin-o.github.io/project1/">SARAFIN</a></h1>
       
 
 <div class = "container" style = "">
