--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 	<header class="header">
-		<div>
+		<div id="button">
 	      <input type="checkbox" name="toggle" id="toggle"/>
 		  <label for="toggle"></label>
 	    	<div class="message">
